# git-ai-studio

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  README.zh-CN.md  package.json
docs/adr/: 0011-desktop-companion-ink-pet.md  README.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  pet.json
src-tauri/src/: lib.rs  pet.rs  state.rs
src-tauri/src/commands/: auth.rs  diagnostic.rs  settings.rs
src-tauri/src/git_ai/: auth.rs
src/__tests__/: petState.test.ts
src/components/: FormulaPopover.tsx  InkPetController.tsx  InkPetWindow.tsx  OnboardingCard.tsx  RepoSetupGuide.tsx  WorkingDirSummary.tsx
src/components/Layout/: Rail.tsx
src/i18n/: i18next.d.ts  index.ts
src/i18n/locales/: en.json  zh-CN.json
src/lib/: api.ts  copy.ts  diagnosticChecks.ts  petRenderer.ts  petState.ts  types.ts
src/pages/: Dashboard.tsx  Diagnostic.tsx  Install.tsx  Manual.tsx  Settings.tsx  Stats.tsx
