[package]
name = "git-ai-studio"
version = "0.1.0"
description = "git-ai client toolkit: env diagnostics, install/upgrade and local AI code stats viewer"
authors = []
edition = "2021"

[lib]
name = "git_ai_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "time", "sync", "process", "io-util"] }
thiserror = "2.0"
anyhow = "1"
dirs = "5"
which = "6"
once_cell = "1.20"
log = "0.4"
walkdir = "2.5.0"
regex = "1.12.3"
futures = "0.3.32"
async-trait = "0.1.89"
dunce = "1.0.5"
reqwest = { version = "^0.12", default-features = false, features = ["rustls-tls", "json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
sha2 = "0.10"
toml = "0.8"
notify-debouncer-mini = { version = "0.4", default-features = false }
auto-launch = "0.5"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-notification = "2"
# 应用内自更新:从 GitHub Releases 拉 latest.json + minisign 验签后安装
tauri-plugin-updater = "2"
# 更新安装后重启进程(配合 updater 的 install-then-restart 流程)
tauri-plugin-process = "2"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
strip = "symbols"

[dev-dependencies]
serial_test = "3.4.0"
tempfile = "3.27.0"

